--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -216,6 +216,9 @@ a:hover {
   <p>
       This map lets you look at one layer for the 421a properties in both datasets and see whether the property appears in the DHCR list, tax bills data, or both. There's another layer for J-51 that does the same thing. "Normal" stabilized housing got a little complicated, and I left that out, plus it's a very large number of properties.
   </p>
+  <p>
+      Here's the <a href="https://github.com/lblok/savi-750/tree/gh-pages/assignment3" target="_blank">code</a>.
+  </p>
 </div>
 </body>
 </html>
